<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        />

    <EditText
        android:id="@+id/editTextEmaillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/EditTextEmailLogin"
        style="@style/Edit_text"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toTopOf="@+id/containerComponents"/>

    <EditText
        android:id="@+id/editTextPassWordlogin"
        style="@style/Edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/EditTextSenhaLogin"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmaillogin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_logar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/ButtonLogin"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassWordlogin"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_logar" />

    <TextView
        android:id="@+id/TextViewCadastrarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Possui Conta?"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/TextViewRecuperarLogin"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        />

    <TextView
        android:id="@+id/TextViewRecuperarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recuperar Conta"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/TextViewCadastrarLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>